modal design refactoring and responsiveness

--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -69,7 +69,7 @@
       </app-po-table>
     </div>
 
-    <div class="row doc-froala-div">
+    <div class="row mt-3">
       <div [ngClass]="showResponsiveDesignDown ? 'col-sm-12 col-md-4 froala-design' : 'col-sm-12 col-md-4 p-b-0'">
         <app-po-documents #poDocument [documentData]="documentList" *ngIf="documentList || documentList === null"> </app-po-documents>
       </div>
