--- a/src/app/shared/components/upload/upload.component.html
+++ b/src/app/shared/components/upload/upload.component.html
@@ -20,12 +20,18 @@
     </div>
     <input accept=".pdf, .doc, .docx, .jpg, .jpeg, .png " type="file" #fileDropRef id="fileDropRef" class="drag-and-drop" title="" multiple (change)="uploadFiles($event.target.files)" />
     <span class="upload-msg">Drag and drop or <span for="fileDropRef" class="main-color">Browse</span> files to upload</span>
+    
     <div class="image-integration" *ngIf="imageIntegration">
       <span class="file-limit">Max File Size: 5MB, Accepted Formats: .png, .jpg, .jpeg</span>
+    </div>
+
+    <div class="add-receipt-message" *ngIf="maxDocsLimit">
+      <span class="file-limit">*maximum 4 documents are allowed</span>
     </div>
   </div>
 
 
+  <!-- Will visible for mobile screens -->
   <div class="col-xs-12 display-flex p-t-10" *ngIf="grnResponsive">
    <button type="button" class="main-background-color main-button color-white" mat-icon-button>
     <input accept=".pdf, .doc, .docx, .jpg, .jpeg, .png " type="file" #fileDropRef id="fileDropRef" class="drag-and-drop" title="" multiple (change)="uploadFiles($event.target.files)" />
