--- a/src/app/shared/dialogs/delete-bom/delete-bom-component.html
+++ b/src/app/shared/dialogs/delete-bom/delete-bom-component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-content>
+<section class="modal-outer">
 
   <div class="modal-header">
     <h5 mat-dialog-title class="mb-0">Confirmation</h5>
@@ -8,23 +8,26 @@
     </button>
   </div>
 
-  <div class="modal-body">
-    <div class="row">
-      <div class="col-sm-12">
-        <p class="text-center mb-0">Are you sure you want to delete this material?</p>
-      </div>
-    </div>
+  <div mat-dialog-content>
 
-    <div mat-dialog-actions>
-      <div class="col-sm-12 save-btn-add-edit-user-modal">
-        <button mat-raised-button (click)="cancel()" class="main-color main-button pull-left">
-          Cancel
-        </button>
-        <button mat-raised-button (click)="deactivateMaterial()"
-          class="main-background-color main-button color-white pull-right">
-          Delete
-        </button>
+    <div class="modal-body">
+      <div class="row">
+        <div class="col-sm-12">
+          <p class="text-center mb-0">Are you sure you want to delete this material?</p>
+        </div>
+      </div>
+
+      <div mat-dialog-actions>
+        <div class="col-sm-12 save-btn-add-edit-user-modal">
+          <button mat-raised-button (click)="cancel()" class="main-color main-button pull-left">
+            Cancel
+          </button>
+          <button mat-raised-button (click)="deactivateMaterial()"
+            class="main-background-color main-button color-white pull-right">
+            Delete
+          </button>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</section>
