--- a/src/app/shared/dialogs/view-image/view-image.component.html
+++ b/src/app/shared/dialogs/view-image/view-image.component.html
@@ -1,20 +1,16 @@
-<mat-dialog-content class="view-image-dialog">
-  <div class="modal-content">
+<section class="view-image-dialog">
 
-    <div class="modal-header">
-      <h5 class="modal-title">Image Preview</h5>
-      <button type="button" class="close" (click)="closeDialog()">
-        <span>&times;</span>
-      </button>
-    </div>
+  <div class="modal-header">
+    <h5 class="modal-title">Image Preview</h5>
+    <button type="button" class="close" (click)="closeDialog()">
+      <span>&times;</span>
+    </button>
+  </div>
 
+  <div mat-dialog-content>
     <div class="modal-body text-center">
-
-      <!-- <button type="button" class="close" (click)="closeDialog()">
-        <span>&times;</span>
-      </button> -->
-
-      <ngb-carousel *ngIf="selectedImages?.length" (mouseenter)="addRemoveOverlay($event)" (mouseleave)="addRemoveOverlay($event)" [class.remove-carousel-indicators]="selectedImages.length === 1">        
+      <ngb-carousel *ngIf="selectedImages?.length" (mouseenter)="addRemoveOverlay($event)"
+        (mouseleave)="addRemoveOverlay($event)" [class.remove-carousel-indicators]="selectedImages.length === 1">
         <ng-container *ngFor="let image of selectedImages">
           <ng-template ngbSlide>
             <!-- <img src="assets/images/download-icon-lg.svg" class="cursor-pointer download-link" (click)="downloadImage(image.documentShortUrl, image.documentUrl)" /> -->
@@ -23,13 +19,13 @@
                 <img [src]=image.documentUrl alt="Random first slide" class="img-fluid">
               </ng-container>
             </div>
-            
+
             <div class="carousel-caption">
               <ng-container *ngIf="isAddOpacity">
-                <img src="assets/images/download-white-icon.svg" class="cursor-pointer download-white-icon" 
+                <img src="assets/images/download-white-icon.svg" class="cursor-pointer download-white-icon"
                   (click)="downloadImage(image.documentShortUrl, image.documentUrl)" />
               </ng-container>
-              
+
               <h4>{{ image.documentDesc }}</h4>
               <ng-container *ngIf="data.type === 'supplier'; else defaultCase">
                 <p>Uploaded by {{ image.supplierId ? 'you' : 'contractor' }}</p>
@@ -38,7 +34,7 @@
               <ng-template #defaultCase>
                 <p>Uploaded by {{ image.supplierId ? 'contractor' : 'you' }}</p>
               </ng-template>
-              
+
             </div>
 
             <div class="carousel-overlay" *ngIf="isAddOpacity"></div>
@@ -46,6 +42,6 @@
         </ng-container>
       </ngb-carousel>
     </div>
-
   </div>
-</mat-dialog-content> 
+
+</section>
