--- a/src/app/shared/dialogs/add-edit-grn/grn-documents/grn-documents.component.html
+++ b/src/app/shared/dialogs/add-edit-grn/grn-documents/grn-documents.component.html
@@ -1,18 +1,17 @@
-<div [ngClass]="showResponsive ? 'row p-t-15' : 'row p-t-15 grn-responsive-file-list'">
-  <mat-card [ngClass]="showResponsive ? 'display-flex-important width98Percent margin-0-auto' : 'width98Percent margin-0-auto padd-box-none'">
-    <mat-card-header class="upload-documents-mat-header col-xs-12 col-sm-6 col-md-6">
+<div class="row grn-docs">
+  <!-- <div [ngClass]="showResponsive ? 'display-flex-important width98Percent margin-0-auto' : 'width98Percent margin-0-auto padd-box-none'"> -->
+    
+    <div class="col-md-5 col-sm-6 col-xs-12 upload-documents-mat-header">
       <span class="text-semi-bold width100Percent">
-        <app-upload #uploadRef [documentListLength]="documentListLength" [grnResponsive]="!showResponsive" [filesRemoved]="filesRemoved" (onFileUpdate)="fileUpdate($event)"> </app-upload>
+        <app-upload #uploadRef [documentListLength]="documentListLength" [grnResponsive]="!showResponsive" [maxDocsLimit]="true" [filesRemoved]="filesRemoved" (onFileUpdate)="fileUpdate($event)"> </app-upload>
       </span>
-      <!-- <span class="col-xs-12 text-align-center text-semi-bold">
-        View Document
-      </span> -->
-    </mat-card-header>
-    <mat-card-content class="col-xs-12 col-sm-6 col-md-6">
-      <mat-list class="pt-10">
+    </div>
+
+    <div class="col-md-7 col-sm-6 col-xs-12">
+      <mat-list>
+        <!-- Documents view mode -->
         <span *ngIf="documentData">
           <mat-list-item class="files-list" *ngFor="let file of documentData; let i = index">
-            <!-- <mat-icon>file_copy</mat-icon> -->
             <img class="file-icon" src="../../../../assets/images/file-doc.png" />
             <span>{{ file.DocumentDesc }}</span>
               <span class="show-download">
@@ -26,11 +25,29 @@
           </mat-list-item>
         </span>
       
+        <!-- documents upload mode -->
         <span *ngIf="documentList.length > 0">
-          <div *ngIf="showResponsive" class="font-size16 p-l-15 color-6d6a6a"> Uploaded Documents </div>
-          <div class="grn-responsive-file-list-down">
+
+          <div *ngIf="showResponsive" class="mb-3" style="font-weight: 500;">Uploaded Documents</div>
+
+          <div class="upload-image-info mb-3 d-flex align-items-center justify-content-between"
+            *ngFor="let file of documentList; let i = index">
+            <div class="image-info d-flex align-items-center">
+              <img src="../../../../assets/images/file-doc.png" alt="" class="img-fluid grn-doc">
+              <span class="ml-2">{{ file.documentName }}</span>
+            </div>
+
+            <div class="image-actions d-flex align-items-center">
+              <a type="button" target="_blank" [href]="file.Url">
+                <img src="assets/images/download-po.png" class="mr-3 ml-2 cursor-pointer"/>
+              </a>
+              <img src="assets/images/delete-button.png" class="orange-text cursor-pointer"
+                (click)="removeFile(i)" />
+            </div>
+          </div>
+
+          <!-- <div class="grn-responsive-file-list-down">
             <mat-list-item class="files-list grn-doc" *ngFor="let file of documentList; let i = index">
-              <!-- <mat-icon>file_copy</mat-icon> -->
               <img class="file-icon" src="../../../../assets/images/file-doc.png" />
               <span class="color-6d6a6a">{{ file.documentName }}</span>
               <span class="show-download">
@@ -44,16 +61,15 @@
                 <mat-icon class="font-size-16">cancel</mat-icon>
               </button>
             </mat-list-item>
-          </div>
+          </div> -->
         </span>
 
-        <span *ngIf="!documentData">
+        <!-- <span *ngIf="!documentData">
             <div *ngIf="showResponsive" class="col-xs-12 font-size-vary-grn text-align-center color-#989898">
               *maximum 4 documents are allowed
             </div>
-        </span>
+        </span> -->
         
       </mat-list>
-    </mat-card-content>
-  </mat-card>
+    </div>
 </div>
