--- a/src/app/shared/dialogs/delete-drafted-po/delete-drafted-po.component.html
+++ b/src/app/shared/dialogs/delete-drafted-po/delete-drafted-po.component.html
@@ -1,27 +1,26 @@
-
-  <div class="header-add-edit-dialog">
-      <h1 mat-dialog-title>Confirmation</h1>
-      <button type="button" class="close" (click)="cancel()" aria-label="Close">
-        <span aria-hidden="true">×</span>
-      </button>
+<section class="modal-outer">
+  <div class="modal-header">
+    <h5 mat-dialog-title class="mb-0">Confirmation</h5>
+    <button type="button" class="close" (click)="cancel()" aria-label="Close">
+      <span aria-hidden="true">×</span>
+    </button>
   </div>
-   <div class="col-sm-12 padding-for-dialog-after-header text-align-center">
-     Are you sure you want to delete this PO?
-   </div>
-      
-  <div mat-dialog-actions>
-    <div class="col-sm-12 save-btn-add-edit-user-modal">
-        <button
-        mat-raised-button (click)="cancel()"
-        class="main-color main-button pull-left"
-      >
-        Cancel
-      </button>
-      <button
-        mat-raised-button (click)="deactivateUser()"
-        class="main-background-color main-button color-white pull-right"
-      >
-        Delete
-      </button>
+
+  <div mat-dialog-content>
+    <div class="modal-body">
+      <div class="col-sm-12">
+        <p class="text-center mb-0">Are you sure you want to delete this PO?</p>
+      </div>
+
+      <div mat-dialog-actions>
+        <div class="col-sm-12 save-btn-add-edit-user-modal">
+          <button mat-raised-button (click)="cancel()" class="main-color main-button pull-left">Cancel</button>
+          <button mat-raised-button (click)="deactivateUser()"
+            class="main-background-color main-button color-white pull-right">
+            Delete
+          </button>
+        </div>
+      </div>
     </div>
   </div>
+</section>
