--- a/src/app/shared/dialogs/upload-image/upload-image.component.html
+++ b/src/app/shared/dialogs/upload-image/upload-image.component.html
@@ -1,19 +1,21 @@
-<mat-dialog-content class="supplier-rating-dialog upload-img-dialog">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title">Add/Edit Image</h5>
-      <button type="button" class="close" (click)="closeDialog()">
-        <span>&times;</span>
-      </button>
-    </div>
+<section class="modal-outer supplier-rating-dialog upload-img-dialog">
+  <div class="modal-header">
+    <h5 mat-dialog-title class="mb-0">Add/Edit Image</h5>
+    <button type="button" class="close" (click)="closeDialog()">
+      <span>&times;</span>
+    </button>
+  </div>
 
+  <div mat-dialog-content>
     <div class="modal-body text-center">
       <div class="row">
         <div class="col-md-6 col-sm-12">
           <div class="upload-image-section">
-            <app-upload #uploadRef (onFileUpdate)="fileUpdate($event)" [imageIntegration]="true" [errorMessage]="true" (fileSizeErr)="getFileSizeErr($event)">
+            <app-upload #uploadRef (onFileUpdate)="fileUpdate($event)" [imageIntegration]="true" [errorMessage]="true"
+              (fileSizeErr)="getFileSizeErr($event)">
             </app-upload>
-            <span class="uploaded-filename" *ngIf="subFileName && !errorMessage && isDisplayErr">{{subFileName}} has been successfully
+            <span class="uploaded-filename" *ngIf="subFileName && !errorMessage && isDisplayErr">{{subFileName}} has
+              been successfully
               uploaded.</span>
           </div>
 
@@ -27,7 +29,8 @@
 
         <div class="col-md-6 col-sm-12">
 
-          <p class="image-heading supplier-img-heading" *ngIf="data.type === 'supplier' || data.type === 'po'">Images uploaded by you</p>
+          <p class="image-heading supplier-img-heading" *ngIf="data.type === 'supplier' || data.type === 'po'">Images
+            uploaded by you</p>
 
           <!-- If previous images exists -->
           <ng-container *ngIf="prevDocumentList?.length">
@@ -39,7 +42,8 @@
               </div>
 
               <div class="image-actions d-flex align-items-center">
-                <img src="assets/images/delete-button.png" class="mr-3 ml-2 cursor-pointer" (click)="removeImage(file.documentShortUrl)" />
+                <img src="assets/images/delete-button.png" class="mr-3 ml-2 cursor-pointer"
+                  (click)="removeImage(file.documentShortUrl)" />
                 <img src="assets/images/download-po.png" class="orange-text cursor-pointer"
                   (click)="downloadImage(file.documentShortUrl, file.documentUrl)" />
               </div>
@@ -56,26 +60,25 @@
             </div>
 
             <div class="image-actions d-flex align-items-center">
-              <img src="assets/images/delete-button.png" class="mr-3 ml-2 cursor-pointer" (click)="removeImage(file.documentShortUrl)" />
-              <!-- <img src="assets/images/download-po.png" class="orange-text cursor-pointer"
-                (click)="downloadImage(file.documentUrl, file.imageUrl)" /> -->
+              <img src="assets/images/delete-button.png" class="mr-3 ml-2 cursor-pointer"
+                (click)="removeImage(file.documentShortUrl)" />
               <img src="assets/images/download-po.png" class="orange-text cursor-pointer"
                 (click)="downloadImage(file.documentShortUrl, file.documentUrl)" />
             </div>
-
           </div>
 
           <!-- For Supplier Bid page (html will render if contractor images exists) -->
           <ng-container *ngIf="contractorImagesList?.length">
             <div class="upload-image-info mb-3">
-              <hr/>
+              <hr />
               <p class="image-heading">Images uploaded by contractor</p>
-              <div *ngFor="let file of contractorImagesList; let i = index" class="d-flex align-items-center justify-content-between mb-2">
+              <div *ngFor="let file of contractorImagesList; let i = index"
+                class="d-flex align-items-center justify-content-between mb-2">
                 <div class="image-info d-flex align-items-center">
                   <img [src]="file.documentThumbnailUrl" alt="" class="img-fluid thumbnail-img">
                   <span class="ml-2">{{ file.documentDesc }}</span>
                 </div>
-  
+
                 <div class="image-actions d-flex align-items-center">
                   <img src="assets/images/download-po.png" class="orange-text cursor-pointer"
                     (click)="downloadImage(file.documentShortUrl, file.documentUrl)" />
@@ -83,7 +86,7 @@
               </div>
             </div>
           </ng-container>
-          
+
         </div>
       </div>
 
@@ -92,6 +95,5 @@
         <!-- [disabled]="!((documentList && documentList.length) || (prevDocumentList && prevDocumentList.length))" -->
       </p>
     </div>
-
   </div>
-</mat-dialog-content>
+</section>
