--- a/src/assets/scss/pages/po.component.scss
+++ b/src/assets/scss/pages/po.component.scss
@@ -464,6 +464,35 @@ s .validTill {
   }
 }
 
+.po-docs-outer .row {
+  padding: 10px 10px !important;
+}
+
+.view-upload-docs{
+  background-color: #fff;
+  border-radius: 6px;
+  padding: 15px 15px;
+
+  .upload-image-info{
+    margin-left: 0px;
+  }
+
+  .view-upload-docs-inner{
+    position: relative;
+    .grey-dotted-border{
+      padding: 15px 20px !important;
+    }
+
+    .upload-green-tick {
+      margin: auto auto 15px;
+    }
+
+    .upload-image-info:last-child{
+      margin-bottom: 0px !important;
+    }
+  }
+}
+
 @media only screen and (max-width: 1199px){
   .edit-view-purchase-order{
     .mat-header-cell, .mat-cell, .add-taxes-col span, .small-text{
